--- a/index.html
+++ b/index.html
@@ -138,41 +138,20 @@
 
   <!-- Page Content -->
   <div class="row">
-    <div id="carouselExampleControls" class="carousel slide vw-100" data-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="src/img/architectural-design-architecture-colorful-houses-1370704.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="src/img/architecture-chairs-contemporary-2343466.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="src/img/center-table-comfortable-contemporary-2499970.jpg" class="d-block w-100" alt="...">
-        </div>
+    <div class="row hero-top">
+      <div class="col-lg-12 text-center">
+        <h1 class="mt-5">Bootstrap.</h1>
+        <p class="lead">This is my bootstrap example site</p>
+        <ul class="list-unstyled">
+          <li>Using:</li>
+          <li>Bootstrap 4.3.1</li>
+          <li>jQuery 3.3.1</li>
+        </ul>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
   </div>
   <section class="hero">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h1 class="mt-5">Bootstrap.</h1>
-          <p class="lead">This is my bootstrap example site</p>
-          <ul class="list-unstyled">
-            <li>Using:</li>
-            <li>Bootstrap 4.3.1</li>
-            <li>jQuery 3.3.1</li>
-          </ul>
-        </div>
-      </div>
       <div class="row mt-5">
         <div class="col-md">
           <div class="card" style="width: 18rem;">
